--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,3 @@
 packages:
-  - package: dbt-labs/dbt_utils
-    version: [">=0.8.0", "<2.0.0"]
+  - git: https://github.com/dbt-labs/dbt-utils.git
+    revision: 1.0.0
